--- a/demo/index.scss
+++ b/demo/index.scss
@@ -1,3 +1,5 @@
+@import "@stein197/react-ui/index";
+
 *,
 *::before,
 *::after {
@@ -48,20 +50,20 @@ button {
 	line-height: 1;
 	cursor: pointer;
 	transform-origin: center;
-}
 
-button:disabled {
-	cursor: default;
-	filter: grayscale(1);
-}
-
-button:not(:disabled):hover {
-	filter: brightness(1.2);
-}
-
-button:not(:disabled):active {
-	filter: brightness(0.8);
-	transform: scale(.95);
+	&:disabled {
+		cursor: default;
+		filter: grayscale(1);
+	}
+	
+	&:not(:disabled):hover {
+		filter: brightness(1.2);
+	}
+	
+	&:not(:disabled):active {
+		filter: brightness(0.8);
+		transform: scale(.95);
+	}
 }
 
 .text-center {
@@ -70,32 +72,33 @@ button:not(:disabled):active {
 
 .dropdown {
 	z-index: 10;
+
+	ul {
+		border: 1px solid gray;
+		border-radius: 20px;
+
+		li {
+			padding: 10px;
+
+			&:hover {
+				background-color: lightblue;
+			}
+			
+			&.active {
+				font-weight: bold;
+			}
+			
+			&.focused {
+				background-color: lightblue;
+			}
+			
+			&:not(:first-child) {
+				border-top: 1px solid gray;
+			}
+		}
+	}
 }
 
-.dropdown ul {
-	border: 1px solid gray;
-	border-radius: 20px;
-}
-
-.dropdown li {
-	padding: 10px;
-}
-
-.dropdown li:hover {
-	background-color: lightblue;
-}
-
-.dropdown li.active {
-	font-weight: bold;
-}
-
-.dropdown li.focused {
-	background-color: lightblue;
-}
-
-.dropdown li:not(:first-child) {
-	border-top: 1px solid gray;
-}
 
 h1 {
 	font-size: 3rem;
@@ -124,20 +127,20 @@ h1 {
 	padding: 20px;
 	box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .3);
 	margin: 10px 0;
-}
 
-.card tr:not(:first-child) {
-	border-top: 1px solid gray;
-}
-
-.card td {
-	padding: 10px 0;
-}
-
-.card input[type="checkbox"] {
-	width: 2rem;
-	height: 2rem;
-	cursor: pointer;
+	tr:not(:first-child) {
+		border-top: 1px solid gray;
+	}
+	
+	td {
+		padding: 10px 0;
+	}
+	
+	input[type="checkbox"] {
+		width: 2rem;
+		height: 2rem;
+		cursor: pointer;
+	}
 }
 
 .card-white,
