--- a/demo/index.scss
+++ b/demo/index.scss
@@ -20,12 +20,24 @@ table {
 	width: 100%;
 }
 
-input {
+input[type="text"] {
 	padding: 10px;
 	width: 100%;
 	border-radius: 50px;
 	border: 1px solid gray;
 	outline: none;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+	width: 2rem;
+	height: 2rem;
+	vertical-align: middle;
+	cursor: pointer;
+}
+
+label {
+	cursor: pointer;
 }
 
 pre {
@@ -134,12 +146,6 @@ h1 {
 	
 	td {
 		padding: 10px 0;
-	}
-	
-	input[type="checkbox"] {
-		width: 2rem;
-		height: 2rem;
-		cursor: pointer;
 	}
 }
 
